--- a/css/styles.css
+++ b/css/styles.css
@@ -788,7 +788,7 @@ position: relative;
    transform: translateY(0);
    opacity: 1;
 }
-/* modal windou */
+/* modal window */
 .backdrop {
    position: fixed;
    top: 0;
