--- a/css/main.css
+++ b/css/main.css
@@ -892,11 +892,6 @@ footer {
   border-radius: 50%;
 }
 
-.close-icon:hover {
-  fill: #2196F3;
-  cursor: pointer;
-}
-
 .close-icon {
   position: absolute;
   top: 50%;
@@ -905,6 +900,11 @@ footer {
   width: 17px;
   height: 17px;
   fill: #000000;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-icon:hover {
+  fill: #2196F3;
+  cursor: pointer;
 }
 
 .is-hidden {
@@ -953,20 +953,16 @@ footer {
   padding-left: 42px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .form-input:hover {
   cursor: pointer;
   border: 1px solid rgb(33, 150, 243);
 }
-
 .form-input:focus {
   outline-color: rgb(33, 150, 243);
 }
-
 .form-input:hover + .input-icon {
   fill: #2196F3;
 }
-
 .form-input:focus + .input-icon {
   fill: #2196F3;
 }
@@ -980,14 +976,12 @@ footer {
   margin-top: 4px;
   padding-top: 12px;
   padding-left: 16px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .coments:hover {
   cursor: pointer;
   border: 1px solid rgb(33, 150, 243);
 }
-
 .coments:focus {
   outline-color: rgb(33, 150, 243);
 }
@@ -999,19 +993,17 @@ footer {
 .label {
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.4;
+  line-height: 0.4;
   letter-spacing: 0.01em;
   color: #757575;
 }
 
 .checkbox {
-  margin-top: 20px;
   border: none;
   display: flex;
   justify-content: center;
 }
-
-.checkbox > p {
+.checkbox p {
   margin-left: 9px;
   font-weight: 400;
   font-size: 14px;
@@ -1019,15 +1011,14 @@ footer {
   letter-spacing: 0.03em;
   color: #757575;
 }
-
-.checkbox > p > a {
+.checkbox a {
   color: #2196F3;
 }
 
 .modal-btn {
   display: block;
   min-width: 200px;
-  padding: 18px, 55px;
+  padding: 10px, 55px;
   margin: 0 auto;
   margin-top: 30px;
   color: white;
