--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -15,4 +15,8 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover, &:focus {
+      background-color: #188ce8;
+      color: #FFFFFF; 
+   }
   }
