--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -31,17 +31,18 @@
     justify-content: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     &:hover  {
+      border: 1px solid #2196F3;
+      color: #2196F3;
+     }
+     &:focus{
+      border: 1px solid #2196F3;
+      color: #2196F3;
+   }
  }
  .clients-icon {
     width: 106px;
     height: 60px;
     fill:currentColor;
  }
- .client-link:hover  {
-    border: 1px solid #2196F3;
-    color: #2196F3;
- }
- .client-link:focus{
-    border: 1px solid #2196F3;
-    color: #2196F3;
- }
+ .client-link
