--- a/sass/layouts/_portfolio.scss
+++ b/sass/layouts/_portfolio.scss
@@ -7,11 +7,10 @@
  }
  .fillter-items {
     list-style: none; 
-    
- }
- .fillter-items:not(:last-child) {
+    &:not(:last-child) {
     margin-right: 8px;
  }
+}
  .filter-btn:hover {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
@@ -29,10 +28,26 @@
     display: block;
     text-decoration: none;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
- }
- .portfolio-link:hover {
+    &:hover, &:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
- }
+    }
+    &:hover .portfolio-phototext {   
+      transform: translateY(0);
+      opacity: 1;
+    }
+    &:hover .portfolio-thumb::before {
+      transform: translateY(0);
+      opacity: 1;
+    }
+    &:focus .portfolio-phototext {   
+      transform: translateY(0);
+      opacity: 1;
+    }
+    &:focus .portfolio-thumb::before {
+      transform: translateY(0);
+      opacity: 1;
+    }
+}
  .portfolio-h2 {
     font-family: 'Roboto';
     font-style: normal;
@@ -61,8 +76,7 @@
     position: relative;
     width: 370px;
     height: 294px;
- }
- .portfolio-thumb::before {
+    &::before {
     display: inline-block;
     position: absolute;
     content: "";
@@ -75,7 +89,7 @@
     opacity 50ms cubic-bezier(0.4, 0, 0.2, 1);
     
  }
- 
+}
  .portfolio-phototext-box {
     width: 370px;
     height: 294px;
@@ -103,20 +117,4 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     overflow: hidden;
- }
- .portfolio-link:hover .portfolio-phototext {   
-    transform: translateY(0);
-    opacity: 1;
- }
- .portfolio-link:hover .portfolio-thumb::before {
-    transform: translateY(0);
-    opacity: 1;
- }
- .portfolio-link:focus .portfolio-phototext {   
-    transform: translateY(0);
-    opacity: 1;
- }
- .portfolio-link:focus .portfolio-thumb::before {
-    transform: translateY(0);
-    opacity: 1;
  }
