--- a/sass/layouts/_team-block.scss
+++ b/sass/layouts/_team-block.scss
@@ -58,22 +58,15 @@
     align-items: center;
     justify-content: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     &:hover, &:focus {    
+      color:#FFFFFF;
+      background: #2196F3;     
+   }
   }
   .social-icon {
     width:20px;
     height: 20px;
     fill:currentColor;
  }
- .social-link:hover {
-    
-    color:#FFFFFF;
-    background: #2196F3;
-   
- }
- .social-link:focus {
-    
-    background: #2196F3;
-    color: #FFFFFF;
-   
- }
+ 
  
