--- a/sass/layouts/_what-we-do-block.scss
+++ b/sass/layouts/_what-we-do-block.scss
@@ -1,6 +1,12 @@
 /* what-we-do-block */
 .what-we-do-block {
     padding-top: 0;
+    & img {
+      width: 370px;
+      height: 294px;
+      padding-bottom: 94px; 
+      
+   }
   }
   .what-we-do-list {
     display: flex;     
@@ -8,17 +14,11 @@
   .what-we-do-items {
     position: relative;
    text-decoration: none;
-  }
-  .what-we-do-items:not(:first-child) {
+     &:not(:first-child) {
     margin-left: 30px;
   }
-  .what-we-do-block>img {
-     width: 370px;
-     height: 294px;
-     padding-bottom: 94px; 
-     
-  }
-  
+}
+   
   .what-we-do-text {
     font-weight: 700;
     line-height: 1.8;
